--- a/.github/workflows/deployment-aws.yml
+++ b/.github/workflows/deployment-aws.yml
@@ -65,6 +65,7 @@ jobs:
           TARGET="${TARGET:=${GITHUB_REF##*-}}"
           echo "Deploying to target: $TARGET"
           mkdir -p vendor
+          echo $GITHUB_SHA > commit.txt
           cp "aws/scripts/appspec.yml" appspec.yml
           zip -r deployment.zip .
           aws s3 cp deployment.zip "s3://${DEPLOYMENT_BUCKET}/deployment.zip"
